// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar render render correctly 1`] = `
<div
  class="rc-calendar"
  tabindex="0"
>
  <div
    class="rc-calendar-panel"
  >
    <div
      class="rc-calendar-input-wrap"
    >
      <div
        class="rc-calendar-date-input-wrap"
      >
        <input
          class="rc-calendar-input "
          value=""
        />
      </div>
      <a
        class="rc-calendar-clear-btn"
        role="button"
        title="清除"
      />
    </div>
    <div
      class="rc-calendar-date-panel"
    >
      <div
        class="rc-calendar-header"
      >
        <div
          style="position:relative;"
        >
          <a
            class="rc-calendar-prev-year-btn"
            role="button"
            title="上一年 (Control键加左方向键)"
          />
          <a
            class="rc-calendar-prev-month-btn"
            role="button"
            title="上个月 (翻页上键)"
          />
          <span
            class="rc-calendar-ym-select"
          >
            <a
              class="rc-calendar-year-select"
              role="button"
              title="选择年份"
            >
              2017年
            </a>
            <a
              class="rc-calendar-month-select"
              role="button"
              title="选择月份"
            >
              三月
            </a>
          </span>
          <a
            class="rc-calendar-next-month-btn"
            title="下个月 (翻页下键)"
          />
          <a
            class="rc-calendar-next-year-btn"
            title="下一年 (Control键加右方向键)"
          />
        </div>
      </div>
      <div
        class="rc-calendar-body"
      >
        <table
          cellspacing="0"
          class="rc-calendar-table"
          role="grid"
        >
          <thead>
            <tr
              role="row"
            >
              <th
                class="rc-calendar-column-header"
                role="columnheader"
                title="周一"
              >
                <span
                  class="rc-calendar-column-header-inner"
                >
                  一
                </span>
              </th>
              <th
                class="rc-calendar-column-header"
                role="columnheader"
                title="周二"
              >
                <span
                  class="rc-calendar-column-header-inner"
                >
                  二
                </span>
              </th>
              <th
                class="rc-calendar-column-header"
                role="columnheader"
                title="周三"
              >
                <span
                  class="rc-calendar-column-header-inner"
                >
                  三
                </span>
              </th>
              <th
                class="rc-calendar-column-header"
                role="columnheader"
                title="周四"
              >
                <span
                  class="rc-calendar-column-header-inner"
                >
                  四
                </span>
              </th>
              <th
                class="rc-calendar-column-header"
                role="columnheader"
                title="周五"
              >
                <span
                  class="rc-calendar-column-header-inner"
                >
                  五
                </span>
              </th>
              <th
                class="rc-calendar-column-header"
                role="columnheader"
                title="周六"
              >
                <span
                  class="rc-calendar-column-header-inner"
                >
                  六
                </span>
              </th>
              <th
                class="rc-calendar-column-header"
                role="columnheader"
                title="周日"
              >
                <span
                  class="rc-calendar-column-header-inner"
                >
                  日
                </span>
              </th>
            </tr>
          </thead>
          <tbody
            class="rc-calendar-tbody"
          >
            <tr
              class=""
              role="row"
            >
              <td
                class="rc-calendar-cell rc-calendar-last-month-cell"
                role="gridcell"
                title="2017年2月27日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  27
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-last-month-cell"
                role="gridcell"
                title="2017年2月28日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  28
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017年3月1日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  1
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017年3月2日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  2
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017年3月3日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  3
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017年3月4日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  4
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017年3月5日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  5
                </div>
              </td>
            </tr>
            <tr
              class=""
              role="row"
            >
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017年3月6日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  6
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017年3月7日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  7
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017年3月8日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  8
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017年3月9日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  9
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017年3月10日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  10
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017年3月11日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  11
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017年3月12日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  12
                </div>
              </td>
            </tr>
            <tr
              class=""
              role="row"
            >
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017年3月13日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  13
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017年3月14日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  14
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017年3月15日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  15
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017年3月16日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  16
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017年3月17日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  17
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017年3月18日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  18
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017年3月19日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  19
                </div>
              </td>
            </tr>
            <tr
              class=""
              role="row"
            >
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017年3月20日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  20
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017年3月21日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  21
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017年3月22日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  22
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017年3月23日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  23
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017年3月24日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  24
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017年3月25日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  25
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017年3月26日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  26
                </div>
              </td>
            </tr>
            <tr
              class="rc-calendar-current-week rc-calendar-active-week"
              role="row"
            >
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017年3月27日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  27
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017年3月28日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  28
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-today rc-calendar-selected-day"
                role="gridcell"
                title="2017年3月29日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="true"
                  class="rc-calendar-date"
                >
                  29
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017年3月30日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  30
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017年3月31日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  31
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="2017年4月1日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  1
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="2017年4月2日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  2
                </div>
              </td>
            </tr>
            <tr
              class=""
              role="row"
            >
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="2017年4月3日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  3
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="2017年4月4日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  4
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="2017年4月5日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  5
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="2017年4月6日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  6
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="2017年4月7日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  7
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="2017年4月8日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  8
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="2017年4月9日"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  9
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="rc-calendar-footer"
      >
        <span
          class="rc-calendar-footer-btn"
        >
          <a
            class="rc-calendar-today-btn "
            role="button"
            title="2017年3月29日"
          >
            今天
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Calendar render render correctly 2`] = `
<div
  class="rc-calendar"
  tabindex="0"
>
  <div
    class="rc-calendar-panel"
  >
    <div
      class="rc-calendar-input-wrap"
    >
      <div
        class="rc-calendar-date-input-wrap"
      >
        <input
          class="rc-calendar-input "
          value=""
        />
      </div>
      <a
        class="rc-calendar-clear-btn"
        role="button"
        title="Clear"
      />
    </div>
    <div
      class="rc-calendar-date-panel"
    >
      <div
        class="rc-calendar-header"
      >
        <div
          style="position:relative;"
        >
          <a
            class="rc-calendar-prev-year-btn"
            role="button"
            title="Last year (Control + left)"
          />
          <a
            class="rc-calendar-prev-month-btn"
            role="button"
            title="Previous month (PageUp)"
          />
          <span
            class="rc-calendar-my-select"
          >
            <a
              class="rc-calendar-month-select"
              role="button"
              title="Choose a month"
            >
              March
            </a>
            <a
              class="rc-calendar-year-select"
              role="button"
              title="Choose a year"
            >
              2017
            </a>
          </span>
          <a
            class="rc-calendar-next-month-btn"
            title="Next month (PageDown)"
          />
          <a
            class="rc-calendar-next-year-btn"
            title="Next year (Control + right)"
          />
        </div>
      </div>
      <div
        class="rc-calendar-body"
      >
        <table
          cellspacing="0"
          class="rc-calendar-table"
          role="grid"
        >
          <thead>
            <tr
              role="row"
            >
              <th
                class="rc-calendar-column-header"
                role="columnheader"
                title="Sun"
              >
                <span
                  class="rc-calendar-column-header-inner"
                >
                  Su
                </span>
              </th>
              <th
                class="rc-calendar-column-header"
                role="columnheader"
                title="Mon"
              >
                <span
                  class="rc-calendar-column-header-inner"
                >
                  Mo
                </span>
              </th>
              <th
                class="rc-calendar-column-header"
                role="columnheader"
                title="Tue"
              >
                <span
                  class="rc-calendar-column-header-inner"
                >
                  Tu
                </span>
              </th>
              <th
                class="rc-calendar-column-header"
                role="columnheader"
                title="Wed"
              >
                <span
                  class="rc-calendar-column-header-inner"
                >
                  We
                </span>
              </th>
              <th
                class="rc-calendar-column-header"
                role="columnheader"
                title="Thu"
              >
                <span
                  class="rc-calendar-column-header-inner"
                >
                  Th
                </span>
              </th>
              <th
                class="rc-calendar-column-header"
                role="columnheader"
                title="Fri"
              >
                <span
                  class="rc-calendar-column-header-inner"
                >
                  Fr
                </span>
              </th>
              <th
                class="rc-calendar-column-header"
                role="columnheader"
                title="Sat"
              >
                <span
                  class="rc-calendar-column-header-inner"
                >
                  Sa
                </span>
              </th>
            </tr>
          </thead>
          <tbody
            class="rc-calendar-tbody"
          >
            <tr
              class=""
              role="row"
            >
              <td
                class="rc-calendar-cell rc-calendar-last-month-cell"
                role="gridcell"
                title="02/26/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  26
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-last-month-cell"
                role="gridcell"
                title="02/27/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  27
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-last-month-cell"
                role="gridcell"
                title="02/28/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  28
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="03/01/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  1
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="03/02/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  2
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="03/03/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  3
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="03/04/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  4
                </div>
              </td>
            </tr>
            <tr
              class=""
              role="row"
            >
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="03/05/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  5
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="03/06/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  6
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="03/07/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  7
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="03/08/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  8
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="03/09/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  9
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="03/10/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  10
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="03/11/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  11
                </div>
              </td>
            </tr>
            <tr
              class=""
              role="row"
            >
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="03/12/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  12
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="03/13/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  13
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="03/14/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  14
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="03/15/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  15
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="03/16/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  16
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="03/17/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  17
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="03/18/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  18
                </div>
              </td>
            </tr>
            <tr
              class=""
              role="row"
            >
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="03/19/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  19
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="03/20/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  20
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="03/21/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  21
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="03/22/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  22
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="03/23/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  23
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="03/24/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  24
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="03/25/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  25
                </div>
              </td>
            </tr>
            <tr
              class="rc-calendar-current-week rc-calendar-active-week"
              role="row"
            >
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="03/26/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  26
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="03/27/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  27
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="03/28/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  28
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-today rc-calendar-selected-day"
                role="gridcell"
                title="03/29/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="true"
                  class="rc-calendar-date"
                >
                  29
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="03/30/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  30
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="03/31/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  31
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="04/01/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  1
                </div>
              </td>
            </tr>
            <tr
              class=""
              role="row"
            >
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="04/02/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  2
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="04/03/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  3
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="04/04/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  4
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="04/05/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  5
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="04/06/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  6
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="04/07/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  7
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="04/08/2017"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  8
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="rc-calendar-footer"
      >
        <span
          class="rc-calendar-footer-btn"
        >
          <a
            class="rc-calendar-today-btn "
            role="button"
            title="03/29/2017"
          >
            Today
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;
